--- a/inst/css/earr.css
+++ b/inst/css/earr.css
@@ -2,15 +2,18 @@
     background-color: steelblue;
     color: white;
     display: block;
-    height: 40px;
+    /*height: 40px;*/
     line-height: 40px;
     text-decoration: none;
     border-radius: 25px;
     /*margin-left: 5px;*/
-    margin: auto;
+    /*margin: auto;*/
     /*width: 100px;*/
+    padding-top:5px;
+    padding-bottom:10px;
     max-width: 200px;
     text-align: center;
+    cursor: pointer;
 }
 
 .recordButton * {
